# number_theory

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  release-wheels.yml
docs/: USER_GUIDE.md  number_theory_presentation.pptx  number_theory_speech.docx  title_slide.html
docs/scripts/: build_presentation.py  build_speech.py  md2pdf.py
number_theory/: __init__.py  __main__.py  _core.pyi  _core.pyx
tests/: test_gcd_lcm.py
